plugins {
    id 'java-library'
    id 'maven-publish'
}

group 'org.torusresearch'
version '3.2.2'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.torusresearch:fetch-node-details-java:5.0.0'
    implementation 'org.web3j:core:4.8.8-android'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'org.json:json:20090211'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.6.1'
    testImplementation 'org.slf4j:slf4j-simple:1.7.36'
    testImplementation 'com.auth0:java-jwt:3.19.2'
    testImplementation 'net.andreinc:mockneat:0.4.8'
}

test {
    useJUnitPlatform()
}

// We don't want any compiler warnings
compileJava {
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}
compileTestJava {
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}

afterEvaluate {
    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
    }
}